# Tetris

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: CompileFlags.cmake  compile_all_files.cmake  debug.cmake
include/project/: myclass.hpp
include/tetris/: ai.hpp  board.hpp  game.hpp  multiplayer.hpp  renderer.hpp  tetromino.hpp
src/: CMakeLists.txt  ai.cpp  board.cpp  game.cpp  main.cpp  multiplayer.cpp  myclass.cpp  renderer.cpp  tetromino.cpp
test/: CMakeLists.txt  test.cpp  tetris_test.cpp
